--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
-        <meta name="viewport" content="width=device-width, initial-scale=0.6, maximum-scale=1.0;">
+        <meta name="viewport" content="width=device-width, initial-scale=0.65, maximum-scale=1.0;">
     </head>
     <body>
         <div id="top-section">
@@ -10,19 +10,21 @@
             <button id="convert-button">Convert</button>
         </div>
         <div id="bottom-section">
-            <div class="unit-section">
-                <h3 class="unit-title">Length (Meter/Feet)</h3>
-                <p class="unit-conversion" id="length-conversion"></p>
-            </div>
+            <div id="wrapper">
+                <div class="unit-section">
+                    <h3 class="unit-title">Length (Meter/Feet)</h3>
+                    <p class="unit-conversion" id="length-conversion"></p>
+                </div>
 
-            <div class="unit-section">
-                <h3 class="unit-title">Volume (Liters/Gallons)</h3>
-                <p class="unit-conversion" id="volume-conversion"></p>
-            </div>
+                <div class="unit-section">
+                    <h3 class="unit-title">Volume (Liters/Gallons)</h3>
+                    <p class="unit-conversion" id="volume-conversion"></p>
+                </div>
 
-            <div class="unit-section">
-                <h3 class="unit-title">Mass (Kilograms/Pounds)</h3>
-                <p class="unit-conversion" id="mass-conversion"></p>
+                <div class="unit-section">
+                    <h3 class="unit-title">Mass (Kilograms/Pounds)</h3>
+                    <p class="unit-conversion" id="mass-conversion"></p>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
