--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <meta name="viewport" content="width=device-width, initial-scale=0.65, maximum-scale=1.0;">
+        <meta name="theme-color" content="#6943FF"/>
     </head>
     <body>
         <div id="big-wrapper">
