--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
-        <meta name="viewport" content="width=device-width, initial-scale=0.65, maximum-scale=1.0;">
+        <meta name="viewport" content="width=device-width, initial-scale=0.65, maximum-scale=1.0; viewport-fit=cover">
         <meta name="theme-color" content="#6943FF"/>
     </head>
     <body>
