--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
-        <meta name="viewport" content="width=device-width, initial-scale=0.65, maximum-scale=1.0; viewport-fit=cover">
+        <meta name="viewport" content="width=device-width, initial-scale=0.65, maximum-scale=1.0;">
         <meta name="theme-color" content="#6943FF"/>
     </head>
     <body>
-        <div id="big-wrapper">
-            <div id="top-section">
-                <h2 id="title">Metric/Imperial Unit Conversion</h2>
-                <input type="number" id="input-number" value="1"><br>
-                <button id="convert-button">Convert</button>
-            </div>
-            <div id="bottom-section">
-                <div id="wrapper">
-                    <div class="unit-section">
-                        <h3 class="unit-title">Length (Meter/Feet)</h3>
-                        <p class="unit-conversion" id="length-conversion"></p>
-                    </div>
+        <div id="top-section">
+            <h2 id="title">Metric/Imperial Unit Conversion</h2>
+            <input type="number" id="input-number" value="1"><br>
+            <button id="convert-button">Convert</button>
+        </div>
+        <div id="bottom-section">
+            <div id="wrapper">
+                <div class="unit-section">
+                    <h3 class="unit-title">Length (Meter/Feet)</h3>
+                    <p class="unit-conversion" id="length-conversion"></p>
+                </div>
 
-                    <div class="unit-section">
-                        <h3 class="unit-title">Volume (Liters/Gallons)</h3>
-                        <p class="unit-conversion" id="volume-conversion"></p>
-                    </div>
+                <div class="unit-section">
+                    <h3 class="unit-title">Volume (Liters/Gallons)</h3>
+                    <p class="unit-conversion" id="volume-conversion"></p>
+                </div>
 
-                    <div class="unit-section">
-                        <h3 class="unit-title">Mass (Kilograms/Pounds)</h3>
-                        <p class="unit-conversion" id="mass-conversion"></p>
-                    </div>
+                <div class="unit-section">
+                    <h3 class="unit-title">Mass (Kilograms/Pounds)</h3>
+                    <p class="unit-conversion" id="mass-conversion"></p>
                 </div>
             </div>
         </div>
