--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="top-section">
             <h2 id="title">Metric/Imperial Unit Conversion</h2>
-            <input type="number" id="input-number" value="1"><br>
+            <input type="number" id="input-number"><br>
             <button id="convert-button">Convert</button>
         </div>
         <div id="bottom-section">
